# vision

./: README.md  readme.txt  wpa_supplimental_RP.py
research/: FasterRCNN.key  streamingAppRPI.pages
research/camera/: R_PI_camera.pages  ri_opencv.py  rpi_scripts.py
research/code/: Readme  finetune.txt  instance-segmentation-object-tracking.avi  instance-segmentation.avi  instance_segmentation.py  instance_segmentation_with_object_tracking.py  objectTrackingDeepSort.py
research/code/test/streamlit_package/: pyproject.toml
research/code/test/streamlit_package/src/zmedia/: app.py
research/code/test/streamlit_package/src/zmedia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
research/code/test/zm/: Dockerfile  ModelFile  README.md  build_notes.txt  home.py  lat_lon_nodup.csv  main.py  pyproject.toml  requirements.txt  requirements_1.txt  requirements_jul222026.txt  rsync_paths.txt  test.csv  video_locations.csv
research/code/test/zm/.streamlit/: config.toml  credentials.toml  machine_id_v4
research/code/test/zm/assets/: styles.css
research/code/test/zm/assets/os/mac/: zmdata_smb_share.scpt
research/code/test/zm/pages/: data_validation.py  metadata_correction.py  metadata_creater.py  metadata_loader.py  overview.py  static_metadata_loader.py  validate.py
research/code/test/zm/schema/base_data/locations/: in-cities.csv  it-popularplaces.csv  us-nationalparks.csv
research/code/test/zm/setup/ansible/: copy_folders.yaml  inventory.yaml
research/code/test/zm/tools/augment_images/: filter_augment.py
research/code/test/zm/tools/classify/: image_classifier.py  img_classsify.py  multi_img_classify.py
research/code/test/zm/utils/addextdata_util/: addextdata.py
research/code/test/zm/utils/config_util/: app_conf.yaml  archive.yaml  config.py  data_validation_conf.yaml  dataload_conf.yaml  dedup_conf.yaml  editor_conf.yaml  face_conf.yaml  filter.yaml  filter_conf.yaml  missing_metadata_conf.yaml  overview_conf.yaml  preprocess_conf.yaml  quality_conf.yaml  setup_conf.yaml  static_metadata_conf.yaml
research/code/test/zm/utils/dataload_util/: dataload.py
research/code/test/zm/utils/datatrim_util/: datatrim.py
research/code/test/zm/utils/dedup_util/imagededupe/: cnn.py
research/code/test/zm/utils/dedup_util/md5/: dedup_imgs.py
research/code/test/zm/utils/dedup_util/phash/: ImgToHash.py  KDTree.py  KDTreeFinder.py  KDduplicates.py  NearDuplicateImageFinder.py  cKDTree.py  cKDTreeFinder.py  filesystem.py  helper_functions.py  search_similar.py
research/code/test/zm/utils/editor_util/: editor.py
research/code/test/zm/utils/face_detection_util/: face_predictor.py  face_trainer.py  video_face_predictor.py
research/code/test/zm/utils/face_util/: base_face.py  base_face_infer.py  base_face_predict.py  base_facenet.py
research/code/test/zm/utils/filter_util/: filter.py  filter_inferance.py  filter_torch_inference.py  torch_filter.py
research/code/test/zm/utils/missing_util/: exif_missing_metadata.py  exif_missing_video_metadata.py  missing_metadata.py
research/code/test/zm/utils/overview_util/: overview.py
research/code/test/zm/utils/preprocess_util/: LLM_Next.py  load_vectordb.py  ollama_llava_next.py  ollama_llava_video_next.py  preprocess.py  preprocess_video.py
research/code/test/zm/utils/quality_util/: i_q_.py  image_quality.py  video_quality.py
research/code/test/zm/utils/search_util/: search.py
research/code/test/zm/utils/static_metadata_load_util/: static_metadataload.py  user_static_loc.py
research/code/test/zm/utils/util/: chroma_util.py  fast_parquet_util.py  file_type_ext.py  folder_chart.py  image_util.py  location_util.py  model_util.py  setup_app.py  statusmsg_util.py  storage_stat.py  video_util.py
research/code/test/zm/zm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
research/code/test/zmedia_package/: MANIFEST.in  notes.txt  pyproject.toml  req1.txt  requirements.txt  requirements_compiles_notworks.txt
research/code/test/zmedia_package/src/zmedia/: README.md  home.py
research/code/test/zmedia_package/src/zmedia.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
research/code/test/zmedia_package/src/zmedia/assets/: styles.css
research/code/test/zmedia_package/src/zmedia/assets/os/linux/: fstab  smb.conf
research/code/test/zmedia_package/src/zmedia/assets/os/mac/: zmdata_smb_share.scpt
research/code/test/zmedia_package/src/zmedia/pages/: multimodal_search.py  overview.py  validate.py
research/code/test/zmedia_package/src/zmedia/schema/base_data/locations/: ch-popularplaces.csv  us-nationalparks.csv
research/code/test/zmedia_package/src/zmedia/utils/addextdata_util/: addextdata.py
research/code/test/zmedia_package/src/zmedia/utils/config_util/: app_conf.yaml  config.py  filter_conf.yaml  missing_metadata_conf.yaml  overview_conf.yaml  quality_conf.yaml  search_conf.yaml  setup_conf.yaml
research/code/test/zmedia_package/src/zmedia/utils/dataload_util/: dataload.py
research/code/test/zmedia_package/src/zmedia/utils/datatrim_util/: datatrim.py
research/code/test/zmedia_package/src/zmedia/utils/dedup_util/imagededupe/: cnn.py
research/code/test/zmedia_package/src/zmedia/utils/dedup_util/phash/: ImgToHash.py  KDduplicates.py  NearDuplicateImageFinder.py
research/code/test/zmedia_package/src/zmedia/utils/editor_util/: editor.py
research/code/test/zmedia_package/src/zmedia/utils/face_util/: base_face_infer.py  base_face_train.py  base_facenet.py
research/code/test/zmedia_package/src/zmedia/utils/filter_util/: filter_inferance.py
research/code/test/zmedia_package/src/zmedia/utils/overview_util/: overview.py
research/code/test/zmedia_package/src/zmedia/utils/preprocess_util/: load_vectordb.py  preprocess.py
research/code/test/zmedia_package/src/zmedia/utils/search_util/: search.py
research/code/test/zmedia_package/src/zmedia/utils/util/: chroma_util.py  exif_custom_tag.py  image_util.py  model_util.py  setup_app.py  storage_stat.py  us_states.py
research/doc/: AWS.pages  AdvancedFaceRecognitionSystem.pages  Advertisemant_models.pages  LLM.pages  (+179 more)
(+1056 files in other folders)
