[project]
name = "zm"
version = "0.1.0"
description = "zmedia build and deployment management."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.0",
    "aiofiles==24.1.0",
    "aiomultiprocess==0.9.1",
    "ansible-core>=2.17.14",
    "bitsandbytes>=0.47.0",
    "chardet==4.0.0",
    "chromadb==0.6.3",
    "country-converter>=1.3.1",
    "deepface==0.0.93",
    "exifread>=3.4.0",
    "fastparquet==2024.11.0",
    "folium==0.17.0",
    "geopy==2.4.1",
    "gpsphoto==2.2.3",
    "ImageHash==4.3.1",
    "insightface>=0.7.3",
    "inspireface>=1.2.3.post5",
    "joblib==1.4.2",
    "keras_facenet==0.3.2",
    "matplotlib==3.10.5",
    "modelbit>=0.44.3",
    "mtcnn==1.0.0",
    "numpy==1.26.4",
    "onnx==1.18.0",
    "open-clip-torch>=3.1.0",
    "openai_clip==1.0.1",
    "opencv_contrib_python==4.11.0.86",
    "opencv_python==4.10.0.84",
    "opencv_python_headless==4.11.0.86",
    "pandas==2.3.1",
    "piexif>=1.1.3",
    "Pillow==10.1.0",
    "plotly==5.24.1",
    "py3exiv2==0.12.0",
    "pyiqa==0.1.13",
    "pyqt5>=5.15.11",
    "python-exiv2>=0.11.0",
    "PyYAML==6.0.2",
    "scikit_learn==1.7.1",
    "stqdm>=0.0.5",
    "streamlit==1.39.0",
    "streamlit-aggrid>=1.2.1",
    "streamlit-dimensions>=0.0.1",
    "streamlit-extras>=0.6.0",
    "streamlit-imagegrid>=0.0.7",
    "streamlit-option-menu>=0.4.0",
    "streamlit_folium==0.22.1",
    "streamlit_image_select==0.6.0",
    "streamlit_tree_select==0.0.5",
    "tensorflow==2.16.1",
    "tensorflow_cpu==2.16.1",
    "tf-keras>=2.16.0",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "tqdm>=4.67.1",
    "transformers==4.37.2",
    "vega-datasets>=0.9.0",
]
[tool.setuptools.packages.find]
    where = ["."] # Search in the current directory
    include = ["assets*", "pages*", "schema*", "utils*","home.py"] # Include specific patterns
    # exclude = ["tests*", "docs*"] # Exclude specific patterns