# pyproject.toml
[project]
name = "zmedia"
#authers=[
#{name="Bhalchandra Madhekar", email="bmadhekar@gmail.com"},
#]
version = "0.1.0"
description = "A Streamliti zmedia app packaged as a Python package"
requires-python = ">=3.10"
dependencies = [
"build==1.2.1", "absl-py==2.3.1", "accelerate==1.12.0", "addict==2.4.0", "aiofiles==24.1.0", "aiomultiprocess==0.9.1",
 "albucore==0.0.24", "albumentations==2.0.8", "altair==5.5.0", "altex==0.2.0", "annotated-doc==0.0.4", 
 "annotated-types==0.7.0", "ansible-core==2.17.14", "anyio==4.12.1", "appdirs==1.4.4", "asgiref==3.11.0", 
 "asttokens==3.0.1", "astunparse==1.6.3", "attrs==25.4.0", "backoff==2.2.1", "bcrypt==5.0.0", "beautifulsoup4==4.14.3", 
 "bitsandbytes==0.49.1", "blinker==1.9.0", "boto3==1.42.34", "botocore==1.42.34", "branca==0.8.2",
 "cachetools==5.5.2", "certifi==2026.1.4", "cffi==2.0.0", "cfgv==3.5.0", "chardet==4.0.0", "charset-normalizer==3.4.4", 
 "chroma-hnswlib==0.7.6", "chromadb==0.6.3", "click==8.3.1", "colorama==0.4.6", "coloredlogs==15.0.1", "contourpy==1.3.2", 
 "country-converter==1.3.2", "cramjam==2.11.0", "cryptography==46.0.3", "cycler==0.12.1", "cython==3.2.4", "deepface==0.0.93", 
 "distlib==0.4.0", "distro==1.9.0", "durationpy==0.10", "easydict==1.13", "einops==0.8.2", "entrypoints==0.4", "exceptiongroup==1.3.1", 
 "executing==2.2.1", "exifread==3.5.1", "exiv2==0.18.0", "facexlib==0.3.0", "faker==40.1.2", "fastapi==0.128.0", "fastparquet==2024.11.0", 
 "favicon==0.7.0", "filelock==3.20.3", "filterpy==1.4.5", "fire==0.7.1", "flask==3.1.2", "flask-cors==6.0.2", "flatbuffers==25.12.19", 
 "folium==0.17.0", "fonttools==4.61.1", "fsspec==2026.1.0", "ftfy==6.3.1", "future==1.0.0", "gast==0.7.0", "gdown==5.2.1", "geographiclib==2.1", 
 "geopy==2.4.1", "gitdb==4.0.12", "gitpython==3.1.46", "google-pasta==0.2.0", "googleapis-common-protos==1.72.0", "gpsphoto==2.2.3", "grpcio==1.76.0", 
 "gunicorn==24.1.1", "h11==0.16.0", "h5py==3.15.1", "hf-xet==1.2.0", "htbuilder==0.9.0", "httpcore==1.0.9", "httptools==0.7.1", "httpx==0.28.1", 
 "huggingface-hub==0.36.0", "humanfriendly==10.0", "icecream==2.1.10", "identify==2.6.16", "idna==3.11", "imagehash==4.3.1", "imageio==2.37.2", 
 "importlib-metadata==8.7.1", "importlib-resources==6.5.2", "iniconfig==2.3.0", "insightface==0.7.3", "inspireface==1.2.3.post5", "itsdangerous==2.2.0", 
 "jinja2==3.1.6", "jmespath==1.1.0", "joblib==1.4.2", "jsonschema==4.26.0", "jsonschema-specifications==2025.9.1", "keras==3.12.0", "keras-facenet==0.3.2", 
 "kiwisolver==1.4.9", "kubernetes==35.0.0", "lazy-loader==0.4", "libclang==18.1.1", "llvmlite==0.46.0", "lmdb==1.7.5", "loguru==0.7.3", "lxml==6.0.2", 
 "lz4==4.4.5", "markdown==3.10.1", "markdown-it-py==4.0.0", "markdownlit==0.0.7", "markupsafe==3.0.3", "matplotlib==3.10.5", "mdurl==0.1.2", "ml-dtypes==0.3.2", 
 "mmh3==5.2.0", "modelbit==0.44.3", "modelscope==1.34.0", "mpmath==1.3.0", "mtcnn==1.0.0", "namex==0.1.0", "narwhals==2.15.0", "networkx==3.4.2", 
 "nodeenv==1.10.0", "numba==0.63.1", "numpy==1.26.4", "nvidia-cublas-cu12==12.1.3.1", "nvidia-cuda-cupti-cu12==12.1.105", "nvidia-cuda-nvrtc-cu12==12.1.105", 
 "nvidia-cuda-runtime-cu12==12.1.105", "nvidia-cudnn-cu12==8.9.2.26", "nvidia-cufft-cu12==11.0.2.54", "nvidia-curand-cu12==10.3.2.106", 
 "nvidia-cusolver-cu12==11.4.5.107", "nvidia-cusparse-cu12==12.1.0.106", "nvidia-nccl-cu12==2.20.5", "nvidia-nvjitlink-cu12==12.9.86", 
 "nvidia-nvtx-cu12==12.1.105", "oauthlib==3.3.1", "ollama==0.6.1", "onnx==1.18.0", "onnxruntime==1.23.2", "open-clip-torch==3.2.0", "openai-clip==1.0.1", 
 "opencv-contrib-python==4.11.0.86", "opencv-python==4.10.0.84", "opencv-python-headless==4.11.0.86", "opentelemetry-api==1.39.1", 
 "opentelemetry-exporter-otlp-proto-grpc==1.15.0", "opentelemetry-instrumentation==0.60b1", "opentelemetry-instrumentation-asgi==0.60b1", 
 "opentelemetry-instrumentation-fastapi==0.60b1", "opentelemetry-proto==1.15.0", "opentelemetry-sdk==1.39.1", "opentelemetry-semantic-conventions==0.60b1", 
 "opentelemetry-util-http==0.60b1", "opt-einsum==3.4.0", "optree==0.18.0", "orjson==3.11.5", "overrides==7.7.0", "packaging==24.2", "pandas==2.3.1", 
 "piexif==1.1.3", "pillow==10.1.0", "pkginfo==1.12.1.2", "platformdirs==4.5.1", "plotly==5.24.1", "pluggy==1.6.0", "posthog==7.6.0", "pre-commit==4.5.1", 
 "prettytable==3.17.0", "prometheus-client==0.24.1", "protobuf==4.25.8", "psutil==7.2.1", "py3exiv2==0.12.0", "pyarrow==23.0.0", "pycparser==3.0", 
 "pycryptodomex==3.23.0", "pydantic==2.12.5", "pydantic-core==2.41.5", "pydeck==0.9.1", "pygments==2.19.2", "pyiqa==0.1.13", "pymdown-extensions==10.20.1", 
 "pyparsing==3.3.2", "pypika==0.50.0", "pyproject-hooks==1.2.0", "pyqt5==5.15.11", "pyqt5-qt5==5.15.18", "pyqt5-sip==12.18.0", "pysocks==1.7.1", "pytest==9.0.2", 
 "python-dateutil==2.9.0.post0", "python-decouple==3.8", "python-dotenv==1.2.1", "python-exiv2==0.11.0", "pytz==2025.2", "pywavelets==1.8.0", "pyyaml==6.0.2", 
 "referencing==0.37.0", "regex==2026.1.15", "requests==2.32.5", "requests-oauthlib==2.0.0", "resolvelib==1.0.1", "retina-face==0.0.17", "rich==13.9.4", 
 "rpds-py==0.30.0", "s3transfer==0.16.0", "safetensors==0.7.0", "scikit-image==0.25.2", "scikit-learn==1.7.1", "scipy==1.15.3", "sentencepiece==0.2.1",
 "setuptools==80.10.2", "shellingham==1.5.4", "simsimd==6.5.12", "six==1.17.0", "smmap==5.0.2", "soupsieve==2.8.3", "st-annotated-text==4.0.2", 
 "st-theme==1.2.3", "starlette==0.50.0", "stqdm==0.0.5", "streamlit==1.39.0", "streamlit-aggrid==1.2.1.post2", "streamlit-avatar==0.1.3", 
 "streamlit-camera-input-live==0.2.0", "streamlit-card==1.0.2", "streamlit-dimensions==0.0.1", "streamlit-embedcode==0.1.2", "streamlit-extras==0.6.0", 
 "streamlit-faker==0.0.4", "streamlit-folium==0.22.1", "streamlit-image-coordinates==0.1.9", "streamlit-image-select==0.6.0", "streamlit-imagegrid==0.0.7", 
 "streamlit-keyup==0.3.0", "streamlit-option-menu==0.4.0", "streamlit-toggle-switch==1.0.2", "streamlit-tree-select==0.0.5", "streamlit-vertical-slider==2.5.5", 
 "stringzilla==4.6.0", "sympy==1.14.0", "tenacity==9.1.2", "tensorboard==2.16.2", "tensorboard-data-server==0.7.2", "tensorflow==2.16.1", "tensorflow-cpu==2.16.1", 
 "tensorflow-io-gcs-filesystem==0.37.1", "termcolor==3.3.0", "texttable==1.7.0", "tf-keras==2.16.0", "threadpoolctl==3.6.0", "tifffile==2025.5.10", "timm==1.0.24", 
 "tokenizers==0.15.2", "toml==0.10.2", "tomli==2.4.0", "torch==2.3.1", "torchvision==0.18.1", "tornado==6.5.4", "tqdm==4.67.1", "transformers==4.37.2", 
 "triton==2.3.1", "typer==0.21.1", "types-pyyaml==6.0.12.20250915", "types-requests==2.32.4.20260107", "typing-extensions==4.15.0", "typing-inspection==0.4.2", 
 "tzdata==2025.3", "urllib3==2.6.3", "uvicorn==0.40.0", "uvloop==0.22.1", "validators==0.35.0", "vega-datasets==0.9.0", "virtualenv==20.36.1", "watchdog==5.0.3", 
 "watchfiles==1.1.1", "wcwidth==0.4.0", "websocket-client==1.9.0", "websockets==16.0", "werkzeug==3.1.5", "wheel==0.46.3", "wrapt==1.17.3", 
 "xyzservices==2025.11.0", "yapf==0.43.0", "zipp==3.23.0", "zstandard==0.25.0"]

# dependencies = [
#    "streamlit",
#    # Add other dependencies here if not using requirements.txt
#]


[project.scripts]
# This defines a command-line script named "run_app"
# which executes the "main" function in "src/zmedia/home.py"
run-zm-app = "zmedia.home:run_app"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
#requires = ["hatchling"]
#build-backend = "hachling.build"