# pyproject.toml
[project]
name = "zmedia"
#authers=[
#{name="Bhalchandra Madhekar", email="bmadhekar@gmail.com"},
#]
version = "0.1.0"
description = "A Streamliti zmedia app packaged as a Python package"
requires-python = ">=3.10"
#dependencies = []

dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]
# This defines a command-line script named "run_app"
# which executes the "main" function in "src/zmedia/home.py"
zmedia = "zmedia.home:run_app"
#run-zm-app = "streamlit run src/zmedia/home.py"


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
#requires = ["hatchling"]
#build-backend = "hachling.build"

[tool.setuptools.package-data]
zmedia = ["assets/**/*","utils/config_util/*.yaml"]